--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        background-color: hsl(216, 12%, 8%);
+        display: flex;
+        height: 100vh;
+        width: 100%;
+        padding: 1rem;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
